<resources>
	<string name="sp_app_name">SocialPlus</string>
	<string name="sp_lib_name">SocialPlus SDK</string>
	<string name="sp_lib_title">Social+</string>
	<string name="sp_sign_in">Sign in</string>
	<string name="sp_hint_first_name">First name</string>
	<string name="sp_hint_last_name">Last name</string>
	<string name="sp_hint_bio">Bio (optional)</string>
	<string name="sp_hint_title">Title (optional)</string>
	<string name="sp_hint_description">Description</string>
	<string name="sp_hint_add_comment">Type here to comment…</string>
	<string name="sp_hint_add_reply">Type here to reply…</string>
	<string name="sp_comment">Comment</string>
	<string name="sp_reply">Reply</string>
	<string name="sp_post">Post</string>
	<string name="sp_activity_feed">Activity feed</string>
	<string name="sp_screen_title_signin">@string/sp_sign_in</string>
	<string name="sp_screen_title_add_post">Add post</string>
	<string name="sp_dialog_title_add_post">Add new post</string>
	<string name="sp_screen_title_edit_post">Edit post</string>
	<string name="sp_screen_title_topic">@string/sp_post</string>
	<string name="sp_screen_title_comment">Comment</string>
	<string name="sp_screen_title_edit_profile">Edit profile</string>
	<string name="sp_screen_title_create_profile">Create profile</string>
	<string name="sp_screen_title_followers">Followers</string>
	<string name="sp_screen_title_following">@string/sp_tab_title_following</string>
	<string name="sp_screen_title_likes">Likes</string>
	<string name="sp_screen_title_linked_accounts">@string/sp_button_linked_accounts</string>
	<string name="sp_screen_title_activity">@string/sp_activity_feed</string>
	<string name="sp_screen_title_follow_requests">Follow requests</string>
	<string name="sp_screen_title_display_comment">@string/sp_comment</string>
	<string name="sp_screen_title_display_reply">@string/sp_reply</string>
	<string name="sp_screen_title_my_pins">My pins</string>
	<string name="sp_screen_title_popular">@string/sp_menu_popular</string>
	<string name="sp_screen_title_options">@string/sp_navigation_options</string>
	<string name="sp_screen_title_privacy_policy">@string/sp_button_privacy_policy</string>
	<string name="sp_screen_title_terms">@string/sp_button_terms_and_conditions</string>
	<string name="sp_screen_title_delete_account">@string/sp_button_delete_account</string>
	<string name="sp_tab_title_following">Following</string>
	<string name="sp_action_upload_photo">Upload photo</string>
	<string name="sp_account_info_header">Account information</string>
	<string name="sp_menu_new_photo">Take new photo</string>
	<string name="sp_menu_choose_photo">Choose existing photo</string>
	<string name="sp_menu_remove_photo">Remove photo</string>
	<string name="sp_menu_done">Done</string>
	<string name="sp_menu_list">List</string>
	<string name="sp_menu_gallery">Gallery</string>
	<string name="sp_menu_recent">@string/sp_recent</string>
	<string name="sp_menu_popular">Popular</string>
	<string name="sp_menu_today">Today</string>
	<string name="sp_menu_week">This week</string>
	<string name="sp_menu_month">This month</string>
	<string name="sp_menu_all_time">All time</string>
	<string name="sp_menu_add_post">@string/sp_screen_title_add_post</string>
	<string name="sp_menu_unfollow">@string/sp_unfollow</string>
	<string name="sp_menu_follow">@string/sp_follow</string>
	<string name="sp_menu_block_user">Block user</string>
	<string name="sp_menu_report_user">Report user</string>
	<string name="sp_menu_report_custom">Report problem</string>
	<string name="sp_menu_unblock_user">@string/sp_button_unblock</string>
	<string name="sp_menu_report_post">Report post</string>
	<string name="sp_menu_remove_post">Remove post</string>
	<string name="sp_menu_edit_post">Edit post</string>
	<string name="sp_menu_remove_comment">Remove comment</string>
	<string name="sp_menu_report_comment">Report comment</string>
	<string name="sp_menu_remove_reply">Remove reply</string>
	<string name="sp_menu_report_reply">Report reply</string>
	<string name="sp_menu_hide_post">Hide post</string>
	<string name="sp_message_cant_complete_action">Can\'t complete this action</string>
	<string name="sp_message_field_cant_be_empty">This field is required</string>
	<string name="sp_message_correct_input">Please correct the errors in your profile</string>
	<string name="sp_add_picture_suggestion">Tap here to add a picture</string>
	<string name="sp_button_post_topic">@string/sp_post</string>
	<string name="sp_message_enter_description">Please enter a description</string>
	<string name="sp_title_add_post_confirm_quit">Return to feed?</string>
	<string name="sp_message_add_post_confirm_quit">Going back to the feed will delete the content of this draft, are you sure you want to go back?</string>
	<string name="sp_option_add_post_leave">Leave post</string>
	<string name="sp_message_failed_to_publish_post">Failed to publish some of pending posts</string>
	<string name="sp_message_no_permission">Can\'t complete this action without having a corresponding permission</string>
	<string name="sp_elapsed_time_seconds_pattern">%1$ds</string>
	<string name="sp_elapsed_time_minutes_pattern">%1$dm</string>
	<string name="sp_elapsed_time_hours_pattern">%1$dh</string>
	<string name="sp_elapsed_time_days_pattern">%1$dd</string>
	<string name="sp_elapsed_time_weeks_pattern">%1$dw</string>
	<plurals name="sp_topic_likes_pattern">
		<item quantity="one">%1$d like</item>
		<item quantity="other">%1$d likes</item>
	</plurals>
	<plurals name="sp_topic_comments_pattern">
		<item quantity="one">%1$d comment</item>
		<item quantity="other">%1$d comments</item>
	</plurals>
	<plurals name="sp_topic_replies_pattern">
		<item quantity="one">%1$d reply</item>
		<item quantity="other">%1$d replies</item>
	</plurals>
	<string name="sp_message_no_data">No content</string>
	<string name="sp_message_failed_to_load_data">Failed to load data</string>
	<string name="sp_message_no_search_data_pattern">No results found for \"%1$s\"</string>
	<string name="sp_message_failed_to_search_data">Failed to search data</string>
	<string name="sp_message_failed_to_load_comment">Can\'t load comment</string>
	<string name="sp_message_failed_to_load_reply">Can\'t load reply</string>
	<string name="sp_message_failed_to_refresh_topic">Topic does not exist or is not visible to the user</string>
	<string name="sp_button_open_topic">Open topic</string>
	<string name="sp_button_open_comment">Open comment</string>
	<string name="sp_message_network_error">Network error</string>
	<string name="sp_button_edit_profile">Edit profile</string>
	<plurals name="sp_button_followers">
		<item quantity="one">1 Follower</item>
		<item quantity="other">%d Followers</item>
	</plurals>
	<string name="sp_button_following">%1$d following</string>
	<string name="sp_following">Following</string>
	<string name="sp_load_more_retry_button">Loading failed. Tap here to retry.</string>
	<string name="sp_load_more_suggestion">Load more</string>
	<string name="sp_load_more_comments">View previous comments…</string>
	<string name="sp_load_more_replies">View previous replies…</string>
	<string name="sp_recent">Recent</string>
	<string name="sp_content_removed_reply">Reply removed</string>
	<string name="sp_content_removed_comment">Comment removed</string>
	<string name="sp_content_removed_topic">Post removed</string>
	<string name="sp_message_failed_to_remove_comment">Failed to remove comment</string>
	<string name="sp_message_failed_to_remove_reply">Failed to remove reply</string>
	<string name="sp_profile">Profile</string>
	<string name="sp_button_sign_out">Sign out</string>
	<string name="sp_privacy_header">Privacy</string>
	<string name="sp_privacy_description">Only approved followers can see my posts &amp; comments</string>
	<string name="sp_account_header">Account</string>
	<string name="sp_applications_header">Applications</string>
	<string name="sp_message_no_internet_connection">No internet connection</string>
	<string name="sp_message_facebook_login_cancel">Facebook login cancel</string>
	<string name="sp_message_facebook_error_pattern">Facebook error: %1$s.</string>
	<string name="sp_message_ms_live_error_pattern">Microsoft Live error: %1$s</string>
	<string name="sp_message_cant_get_profile">can\'t get profile</string>
	<string name="sp_message_cant_login">can\'t login</string>
	<string name="sp_blocked_users_header">Blocked users</string>
	<string name="sp_no_blocked_users">No blocked users</string>
	<string name="sp_button_unblock">Unblock</string>
	<string name="sp_button_block">Block</string>
	<string name="sp_pending">Pending</string>
	<string name="sp_follow">Follow</string>
	<string name="sp_unfollow">Unfollow</string>
	<string name="sp_remove_follower">Remove</string>
	<string name="sp_removed_follower">Removed</string>
	<string name="sp_hint_search_topics">Search topics</string>
	<string name="sp_hint_search_people">Search people</string>
	<string name="sp_button_follow">@string/sp_follow</string>
	<string name="sp_message_wait_until_account_created">Wait until account is created</string>
	<string name="sp_message_wait_until_account_updated">Wait until account is updated</string>
	<string name="sp_message_no_people">No people</string>
	<string name="sp_message_no_likes">No likes</string>
	<string name="sp_activity_you_following">%s started following you</string>
	<string name="sp_activity_you_mention_topic">%1$s mentioned you in a topic \"%2$s\"</string>
	<string name="sp_activity_you_mention_comment">%1$s mentioned you in a comment \"%2$s\"</string>
	<string name="sp_activity_you_mention_reply">%1$s mentioned you in a reply \"%2$s\"</string>
	<string name="sp_activity_you_like_topic">%1$s liked your topic \"%2$s\"</string>
	<string name="sp_activity_you_like_comment">%1$s liked your comment \"%2$s\"</string>
	<string name="sp_activity_you_like_reply">%1$s liked your reply \"%2$s\"</string>
	<string name="sp_activity_you_follow_request">%s sent you a follow request</string>
	<string name="sp_activity_you_child_peer_topic">%1$s added a new comment to topic \"%2$s\"</string>
	<string name="sp_activity_you_child_peer_comment">%1$s added a new reply to comment \"%2$s\"</string>
	<string name="sp_activity_you_child_topic">%1$s commented on your topic \"%2$s\"</string>
	<string name="sp_activity_you_child_comment">%1$s replied to your comment \"%2$s\"</string>
	<string name="sp_activity_you_follow_accepted">%s accepted your follow request</string>
	<string name="sp_activity_following_following">%1$s started following %2$s</string>
	<string name="sp_navigation_options">Options</string>
	<string name="sp_navigation_activity_feed">@string/sp_activity_feed</string>
	<string name="sp_navigation_pins">My pins</string>
	<string name="sp_navigation_popular">Popular</string>
	<string name="sp_navigation_search">Search</string>
	<string name="sp_navigation_home">Home</string>
	<string name="sp_sign_in_with">Sign in with:</string>
	<string name="sp_facebook">Facebook</string>
	<string name="sp_twitter">Twitter</string>
	<string name="sp_microsoft">Microsoft</string>
	<string name="sp_google">Google</string>
	<string name="sp_muted_apps">Muted applications</string>
	<string name="sp_button_delete_account">Delete account</string>
	<string name="sp_button_delete_search_history">Delete search history</string>
	<string name="sp_button_linked_accounts">Linked accounts</string>
	<string name="sp_button_terms_and_conditions">Terms and conditions</string>
	<string name="sp_button_privacy_policy">Privacy policy</string>
	<string name="sp_header_about">About</string>
	<string name="sp_button_find_friends_other_apps">Find friends from other Social Plus apps</string>
	<string name="sp_button_find_friends_facebook">Find Facebook friends</string>
	<string name="sp_button_find_friends_microsoft">Find Microsoft contacts</string>
	<string name="sp_button_find_friends_google_plus">Find Google+ friends</string>
	<string name="sp_header_follow">Follow people</string>
</resources>