<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~ Licensed under the MIT License. See LICENSE in the project root for license information.
  ~
  -->

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>

		<TextView
			style="@style/SocialPlusSdkOptionsHeader.Phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/sp_applications_header"
			/>

		<TextView
			android:id="@+id/sp_applications"
			style="@style/SocialPlusSdkOptionsItem.Phone"
			android:text="@string/sp_muted_apps"
			/>

		<TextView
			style="@style/SocialPlusSdkOptionsHeader.Phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/sp_header_follow"
			/>

		<TextView
			android:id="@+id/sp_findFacebookFriends"
			style="@style/SocialPlusSdkOptionsItem.Phone"
			android:text="@string/sp_button_find_friends_facebook"
			/>

		<View style="@style/SocialPlusSdkDivider"/>

		<TextView
			android:id="@+id/sp_findGooglePlusFriends"
			style="@style/SocialPlusSdkOptionsItem.Phone"
			android:text="@string/sp_button_find_friends_google_plus"
			/>

		<View style="@style/SocialPlusSdkDivider"/>

		<TextView
			android:id="@+id/sp_findMicrosoftContacts"
			style="@style/SocialPlusSdkOptionsItem.Phone"
			android:text="@string/sp_button_find_friends_microsoft"
			/>

		<View style="@style/SocialPlusSdkDivider"/>

		<TextView
			android:id="@+id/sp_findFriendsFromOtherApps"
			style="@style/SocialPlusSdkOptionsItem.Phone"
			android:text="@string/sp_button_find_friends_other_apps"
			/>

		<TextView
			style="@style/SocialPlusSdkOptionsHeader.Phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/sp_header_about"
			/>

		<TextView
			android:id="@+id/sp_privacyPolicy"
			style="@style/SocialPlusSdkOptionsItem.Phone"
			android:text="@string/sp_button_privacy_policy"
			/>

		<View style="@style/SocialPlusSdkDivider"/>

		<TextView
			android:id="@+id/sp_terms"
			style="@style/SocialPlusSdkOptionsItem.Phone"
			android:text="@string/sp_button_terms_and_conditions"
			/>

		<TextView
			style="@style/SocialPlusSdkOptionsHeader.Phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/sp_account_header"
			/>

		<TextView
			android:id="@+id/sp_linkedAccounts"
			style="@style/SocialPlusSdkOptionsItem.Phone"
			android:text="@string/sp_button_linked_accounts"
			/>

		<View style="@style/SocialPlusSdkDivider"/>

		<TextView
			android:id="@+id/sp_deleteSearchHistory"
			style="@style/SocialPlusSdkOptionsItem.Phone"
			android:text="@string/sp_button_delete_search_history"
			/>

		<View style="@style/SocialPlusSdkDivider"/>

		<TextView
			android:id="@+id/sp_signOut"
			style="@style/SocialPlusSdkOptionsItem.Phone"
			android:text="@string/sp_button_sign_out"
			/>

		<View style="@style/SocialPlusSdkDivider"/>

		<TextView
			android:id="@+id/sp_deleteAccount"
			style="@style/SocialPlusSdkOptionsItem.Phone"
			android:text="@string/sp_button_delete_account"
			/>

	</LinearLayout>

</ScrollView>
