<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~ Licensed under the MIT License. See LICENSE in the project root for license information.
  ~
  -->

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:gravity="center_horizontal"
		>

		<View
			android:layout_width="match_parent"
			android:layout_height="0px"
			android:layout_weight="1"
			/>

		<ImageView
			android:id="@+id/sp_logo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="15dp"
			android:scaleType="center"
			android:src="?attr/sp_largeLogo"
			/>

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>


			<ProgressBar
				android:id="@+id/sp_progress"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_gravity="center_horizontal|top"
				android:layout_marginTop="15dp"
				android:indeterminateTint="#C6FF00"
				android:indeterminateTintMode="src_in"
				android:visibility="gone"
				tools:ignore="UnusedAttribute"
				/>

			<LinearLayout
				android:id="@+id/sp_buttons"
				android:orientation="vertical"
				android:layout_marginTop="64dp"
				style="@style/SocialPlusSdkSignInButtonsLayout"
				android:layout_gravity="center_horizontal"
				>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="?attr/sp_textColorSecondary"
					android:textSize="14dp"
					android:text="@string/sp_sign_in_with"
					android:layout_marginBottom="12dp"
					android:layout_marginLeft="6dp"
					/>

				<Button
					android:id="@+id/sp_signInFacebook"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/sp_facebook"
					android:drawableLeft="@drawable/sp_facebook"
					style="@style/SocialPlusSdkSignInButton"
					app:theme="@style/SocialPlusSdkFacebook"
					/>

				<Button
					android:id="@+id/sp_signInTwitter"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/sp_twitter"
					android:drawableLeft="@drawable/sp_twitter"
					style="@style/SocialPlusSdkSignInButton"
					app:theme="@style/SocialPlusSdkTwitter"
					/>

				<Button
					android:id="@+id/sp_signInMicrosoft"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/sp_microsoft"
					android:drawableLeft="@drawable/sp_windows"
					style="@style/SocialPlusSdkSignInButton"
					app:theme="@style/SocialPlusSdkMicrosoft"
					/>

				<Button
					android:id="@+id/sp_signInGoogle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/sp_google"
					android:drawableLeft="@drawable/sp_google"
					style="@style/SocialPlusSdkSignInButton"
					app:theme="@style/SocialPlusSdkGoogle"
					/>

			</LinearLayout>

		</FrameLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="0px"
			android:layout_weight="1"
			/>

	</LinearLayout>

</ScrollView>